--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           
            <div class="col-md-6" id="Logo">
                <h1 id="hi">HELLO! <br> I'm Susmita Dash</h1> <br>
-               <p class="llabel"> -A frontend web developer and designer</p>
+               <p class="llabel"> -A frontend web developer</p>
            </div>
            <div class="col-md-5" id="developer">
              <img src="female _dev.png" class="img-fluid" alt="Responsive image">
